DEPLOY - fix full bleed images on mobile

--- a/src/app/components/project/project.component.scss
+++ b/src/app/components/project/project.component.scss
@@ -39,7 +39,7 @@ img {
   position: relative;
   left: -25%;
   @media (max-width: $break-medium) {
-    left: -36px;
+    left: -10vw;
   }
   @include no-image;
 }
