--- a/src/app/components/slider/slider.component.scss
+++ b/src/app/components/slider/slider.component.scss
@@ -8,7 +8,7 @@
   overflow: hidden;
   // border: 1px solid red;
   @media (max-width: $break-medium) {
-    left: -36px;
+    left: -10vw;
   }
 }
 
@@ -69,9 +69,10 @@
       // position: absolute;
       width: 100%;
       display: block;
-      padding: 8px 0 16px;
+      padding: 8px 10vw 16px;
       text-align: center;
       font-size: 1.6rem;
+      line-height: 2rem;
     }
   }
 }
